--- a/RxSwift01/RxSwift01/Base.lproj/Main.storyboard
+++ b/RxSwift01/RxSwift01/Base.lproj/Main.storyboard
@@ -83,10 +83,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6P-uv-FeI">
+                                <rect key="frame" x="24" y="81" width="51" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="51" id="iA4-5U-gJg"/>
+                                    <constraint firstAttribute="height" constant="30" id="scb-VR-CR0"/>
+                                </constraints>
+                                <state key="normal" title="VC2"/>
+                                <connections>
+                                    <segue destination="qYx-Qu-zrM" kind="show" id="sdc-hB-XeB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="bIy-Bs-NQs" firstAttribute="centerX" secondItem="xur-98-cUN" secondAttribute="centerX" id="3um-ST-pl6"/>
+                            <constraint firstItem="i6P-uv-FeI" firstAttribute="leading" secondItem="Wa9-Fy-sNa" secondAttribute="leading" constant="24" id="Hjc-RM-yCj"/>
+                            <constraint firstItem="i6P-uv-FeI" firstAttribute="top" secondItem="Wa9-Fy-sNa" secondAttribute="top" constant="17" id="i9U-Z4-ZcW"/>
                             <constraint firstItem="bIy-Bs-NQs" firstAttribute="centerY" secondItem="xur-98-cUN" secondAttribute="centerY" id="mCU-Qv-wYM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wa9-Fy-sNa"/>
@@ -97,7 +110,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tpO-Z7-tBH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1874" y="156"/>
+            <point key="canvasLocation" x="1872.8" y="155.17241379310346"/>
+        </scene>
+        <!--View Controller2-->
+        <scene sceneID="0xt-0o-vzT">
+            <objects>
+                <viewController id="qYx-Qu-zrM" customClass="ViewController2" customModule="RxSwift01" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vGr-Yl-to3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="oZe-63-ru2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YxQ-1l-pFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2607" y="155"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jat-ql-baD">
