--- a/RxSwift01/RxSwift01/Base.lproj/Main.storyboard
+++ b/RxSwift01/RxSwift01/Base.lproj/Main.storyboard
@@ -94,13 +94,26 @@
                                     <segue destination="qYx-Qu-zrM" kind="show" id="sdc-hB-XeB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRj-VL-D4U">
+                                <rect key="frame" x="106" y="81" width="51" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Fqi-wc-R4z"/>
+                                    <constraint firstAttribute="width" constant="51" id="j8U-jl-3Df"/>
+                                </constraints>
+                                <state key="normal" title="VC2"/>
+                                <connections>
+                                    <segue destination="Z9M-wW-YnD" kind="show" id="OeC-U6-J9I"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="bIy-Bs-NQs" firstAttribute="centerX" secondItem="xur-98-cUN" secondAttribute="centerX" id="3um-ST-pl6"/>
                             <constraint firstItem="i6P-uv-FeI" firstAttribute="leading" secondItem="Wa9-Fy-sNa" secondAttribute="leading" constant="24" id="Hjc-RM-yCj"/>
+                            <constraint firstItem="rRj-VL-D4U" firstAttribute="leading" secondItem="i6P-uv-FeI" secondAttribute="trailing" constant="31" id="Sdh-df-9bt"/>
                             <constraint firstItem="i6P-uv-FeI" firstAttribute="top" secondItem="Wa9-Fy-sNa" secondAttribute="top" constant="17" id="i9U-Z4-ZcW"/>
                             <constraint firstItem="bIy-Bs-NQs" firstAttribute="centerY" secondItem="xur-98-cUN" secondAttribute="centerY" id="mCU-Qv-wYM"/>
+                            <constraint firstItem="rRj-VL-D4U" firstAttribute="centerY" secondItem="i6P-uv-FeI" secondAttribute="centerY" id="wtw-k5-faS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wa9-Fy-sNa"/>
                     </view>
@@ -125,7 +138,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YxQ-1l-pFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2607" y="155"/>
+            <point key="canvasLocation" x="2743" y="-269"/>
+        </scene>
+        <!--View Controller3-->
+        <scene sceneID="lgV-WS-UtC">
+            <objects>
+                <viewController id="Z9M-wW-YnD" customClass="ViewController3" customModule="RxSwift01" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S9l-68-Cyk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="dJF-H7-GBD"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NlL-d0-w1I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2742" y="439"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jat-ql-baD">
